fixed issue - last P tag was not showing any text

--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,5 +1,4 @@
 .gpt3__footer {
-    color: white;
 
     display: flex;
     flex-direction: column;
@@ -25,6 +24,7 @@
 }
 
 .gpt3__footer-btn {
+    color: #FFFFFF;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,4 +44,80 @@
     word-spacing: 2px;
     line-height: 21px;
     font-size: 18px;
+}
+
+
+.gpt3__footer-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap:  wrap;
+    flex-direction: row;
+
+    width: 100%;
+    text-align: left;
+}
+
+.gpt3__footer-links div {
+    width: 250px;
+    margin: 1rem;
+}
+
+.gpt3__footer-links_logo {
+    display: flex;
+    flex-direction: column;
+}
+
+.gpt3__footer-links_logo img {
+   width: 118px;
+   height: 30px;
+
+   margin-bottom: 1rem;
+}
+
+.gpt3__footer-links_logo p {
+    font-family: var(--font-family);
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+}
+
+.gpt3__footer-links_div {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.gpt3__footer-links_div h4 {
+    font-family: var(--font-family);
+    font-size: 14px;
+    line-height: 16px;
+
+    color: #FFFFFF;
+
+    margin-bottom: 1rem;
+}
+
+.gpt3__footer-links_div p {
+    font-family: var(--font-family);
+    font-size: 12px;
+    line-height: 14px;
+
+    color: #FFFFFF;
+
+    margin: 0.5rem 0;
+    cursor: pointer;
+}
+
+.gpt3__footer-copyright {
+    margin-top: 2rem;
+    text-align: center;
+    width: 100%;
+}
+
+.gpt3__footer-copyright p {
+    font-family: var(--font-family);
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
 }
